# MH3U-RPX-Patcher

./: .gitignore  CMakeLists.txt  README.md
MH3U_WiiU_Patcher/: CMakeLists.txt  MH3U_WiiU_Patcher.cpp  MH3U_WiiU_Patcher.h  util.cpp  util.h
patches/: Debloated_Attack.json  MH3G_Defense.json
